<resources>
    <string name="app_name">calcApp</string>count_button
    <string name="credit_summ">Сумма кредита</string>
    <string name="rate">Процентная ставка</string>
    <string name="date">Срок кредитования (мес)</string>
    <string name="count_button">Рассчитать</string>
    <string name="interest_per_month">Проценты в месяц:</string>
    <string name="body_credit">Тело кредита:</string>
    <string name="monthly_payment">Ежемесячный платеж:</string>
    <string name="total_sum">Общая сумма:</string>
    <string name="overpayment">Переплата:</string>
</resources>
