<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <EditText
                android:id="@+id/editText_credit_summ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="47dp"
                android:ems="13"
                android:hint="@string/credit_summ"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="132dp"
                android:ems="13"
                android:hint="@string/rate"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="215dp"
                android:ems="13"
                android:hint="@string/date"
                android:inputType="textPersonName"
                tools:ignore="TextFields" />


            <Button
                android:id="@+id/count_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_date"
                android:layout_centerHorizontal="true"
                android:text="@string/count_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_below="@+id/count_button"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_interest_per_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/interest_per_month" />

                <TextView
                    android:id="@+id/textView_body_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/body_credit" />

                <TextView
                    android:id="@+id/textView_monthly_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/monthly_payment" />

                <TextView
                    android:id="@+id/textView_total_sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_sum" />

                <TextView
                    android:id="@+id/textView_overpayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/overpayment" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
